# QtCanvas

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  canvasview.cpp  canvasview.h  circle.cpp  circle.h  intermediate.cpp  intermediate.h  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  message.cpp  message.h  object.h
